--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,13 +4,14 @@
         <item>Building</item>
         <item>Enemy</item>
         <item>General</item>
-        <item>Image</item>
     </string-array>
 
     <string-array name="geo_locations_markers_matched_types">
         <item>Cesium/Assets/Textures/maki/building.png</item>
         <item>Cesium/Assets/Textures/maki/danger.png</item>
         <item>Cesium/Assets/Textures/maki/marker.png</item>
-        <item>Cesium/Assets/Textures/maki/camera.png</item>
     </string-array>
+
+    <string name = "geo_locations_marker_image">Cesium/Assets/Textures/maki/camera.png</string>
+
 </resources>
