--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,20 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="@string/menu_setting_title">
-    </item>
+        android:title="@string/menu_setting_title"
+        app:showAsAction="never" />
 
-    <!--<item-->
-    <!--android:orderInCategory="200"-->
-    <!--android:id="@+id/action_friends"-->
-    <!--android:title="@string/menu_setting_friends">-->
-    <!--</item>-->
+    <item
+        android:id="@+id/action_clear_map"
+        android:orderInCategory="1"
+        android:title="@string/menu_action_clear_map"
+        app:showAsAction="never" />
 </menu>
 
 
