--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -1,4 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable name="map" type="com.teamagam.gimelgimel.app.map.MapViewModel"/>
+    </data>
+<FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_cesium_view"
     android:layout_width="match_parent"
@@ -20,17 +24,24 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/locate_me_fab"
             style="@style/fab"
-            android:src="@android:drawable/ic_dialog_map" />
+            android:src="@android:drawable/ic_dialog_map"
+            android:onClick="@{() -> map.zoomToLastKnownLocation()}"
+        />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/camera_fab"
             style="@style/fab"
-            android:src="@drawable/ic_camera" />
+            android:src="@drawable/ic_camera"
+            android:onClick="@{() -> map.startCameraActivity()}"
+        />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/message_fab"
             style="@style/fab"
-            android:src="@android:drawable/ic_dialog_email" />
+            android:src="@android:drawable/ic_dialog_email"
+            android:onClick="@{() -> map.sendMessageFAB()}"
+        />
     </LinearLayout>
 
 </FrameLayout>
+</layout>
