--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -7,9 +7,9 @@
     android:id="@+id/fragment_cesium_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.view.fragments.ViewerFragment">
+    tools:context=".app.map.view.ViewerFragment">
 
-    <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
+    <com.teamagam.gimelgimel.app.map.cesium.CesiumMapView
         android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
