fixed two way data binding of spinner

--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="end|center"
                 android:layout_marginEnd="8dp"
                 android:entries="@{viewModel.types}"
-                app:selection="@{viewModel.typeIdx}"
+                android:selectedItemPosition="@={viewModel.typeIdx}"
                 />
         </LinearLayout>
 
