--- a/app/src/main/res/layout/dialog_send_message.xml
+++ b/app/src/main/res/layout/dialog_send_message.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:onClick="@{()->viewModel.onPositiveClick()}">
+        android:onClick="@{()->viewModel.sendTextMessage()}">
 
         <EditText
             android:id="@+id/dialog_send_text_message_edit_text"
