Send (Text) message use-case first block done. The app sends text messages via SendMessageInteractor. TBD: message sending result user - notification not implemented yet.
Fixed a bug for both text and geo message dialog fragments - update OK button's enabled status on fragment resume (it'll be disabled when the dialog is displayed at first now).

--- a/app/src/main/res/layout/dialog_send_message.xml
+++ b/app/src/main/res/layout/dialog_send_message.xml
@@ -1,17 +1,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        >
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.viewModels.SendMessageDialogFragmentViewModel" />
+            type="com.teamagam.gimelgimel.app.message.viewModel.SendMessageDialogFragmentViewModel"/>
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:onClick="@{()->viewModel.sendTextMessage()}">
+        >
 
         <EditText
             android:id="@+id/dialog_send_text_message_edit_text"
@@ -21,6 +23,9 @@
             android:inputType="text"
             android:paddingLeft="20dp"
             android:paddingTop="20dp"
-           />
+            android:text="@={viewModel.text}"
+            app:errorEnabled="@{viewModel.inputNotValid}"
+            app:errorText="@{@string/dialog_send_message_invalid_empty_message}"
+            />
     </LinearLayout>
 </layout>
