--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:text="http://schemas.android.com/apk/res-auto"
->
+    >
+
     <data>
-        <variable name="viewModel"
-                  type="com.teamagam.gimelgimel.app.message.viewModel.SendGeoMessageViewModel"/>
+
+        <variable
+            name="viewModel"
+            type="com.teamagam.gimelgimel.app.message.viewModel.SendGeoMessageViewModel"/>
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,7 +25,7 @@
             android:paddingTop="20dp"
             android:text="@{@string/geo_dd_format(viewModel.point.latitude, viewModel.point.longitude)}"
             android:textSize="36px"
-        />
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,9 +41,9 @@
                 android:hint="Please describe the location..."
                 android:paddingLeft="20dp"
                 android:text="@={viewModel.text}"
-                text:errorEnabled="@{viewModel.inputNotValid}"
-                text:errorText="@{@string/dialog_validation_failed_geo_text_message}"
-            />
+                app:errorEnabled="@{viewModel.inputNotValid}"
+                app:errorText="@{@string/dialog_validation_failed_geo_text_message}"
+                />
 
             <Spinner
                 android:layout_width="wrap_content"
@@ -49,7 +52,7 @@
                 android:layout_marginEnd="8dp"
                 android:entries="@{viewModel.types}"
                 android:selectedItemPosition="@={viewModel.typeIdx}"
-            />
+                />
         </LinearLayout>
 
     </LinearLayout>
