SendGeoMessageInteractor now creates the message by itself, instead of the ViewModel. Forced interactors to declare their observable working types (and therefore, the requested subscriber's data-type)

--- a/app/src/main/res/layout/dialog_send_message.xml
+++ b/app/src/main/res/layout/dialog_send_message.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.message.viewModel.SendMessageDialogFragmentViewModel"/>
+            type="com.teamagam.gimelgimel.app.message.viewModel.SendMessageViewModel"/>
     </data>
 
     <LinearLayout
