--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -80,7 +80,7 @@
 
     <fragment
         android:id="@+id/fragment_messages_container"
-        android:name="com.teamagam.gimelgimel.app.view.fragments.messags_panel_fragments.MessagesContainerFragment"
+        android:name="com.teamagam.gimelgimel.app.message.view.MessagesContainerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_messages_container"/>
