--- a/app/src/main/res/layout/fragment_messages_container.xml
+++ b/app/src/main/res/layout/fragment_messages_container.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:orientation="vertical"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.messags_panel_fragments.MessagesContainerFragment">
+    tools:context="com.teamagam.gimelgimel.app.message.view.MessagesContainerFragment">
 
     <FrameLayout
         android:id="@+id/message_title_layout"
