--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_messages_recycler"
-    android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:choiceMode="singleChoice"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".app.view.fragments.messags_panel_fragments.MessagesMasterFragment"
-    tools:listitem="@layout/recycler_messages_list_item"
-/>
+<layout>
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.teamagam.gimelgimel.app.message.viewModel.MessagesMasterViewModel" />
+    </data>
+
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/fragment_messages_recycler"
+        android:name="com.teamagam.gimelgimel.app.view.fragments.MessagesMasterFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".app.message.view.MessagesMasterFragment"
+        tools:listitem="@layout/recycler_messages_list_item" />
+</layout>
