--- a/app/src/main/res/layout/activity_image_fullscreen.xml
+++ b/app/src/main/res/layout/activity_image_fullscreen.xml
@@ -4,7 +4,7 @@
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.teamagam.gimelgimel.app.view.ImageFullscreenActivity">
+             tools:context="com.teamagam.gimelgimel.app.message.view.ImageFullscreenActivity">
 
     <com.teamagam.gimelgimel.app.view.drawable.ZoomableDraweeView
         android:id="@+id/image_fullscreen_view"
